tests/baselines/reference/contextualSignatureInstatiationCovariance.errors.txt
contextualSignatureInstatiationCovariance.ts(8,6): error TS2454: Variable 'f2' is used before being assigned.
contextualSignatureInstatiationCovariance.ts(11,6): error TS2454: Variable 'f2' is used before being assigned.


==== contextualSignatureInstatiationCovariance.ts (2 errors) ====
    interface Animal { x }
    interface TallThing { x2 }
    interface Giraffe extends Animal, TallThing { y }
    
    var f2: <T extends Giraffe>(x: T, y: T) => void;
    
    var g2: (a: Animal, t: TallThing) => void;
    g2 = f2; // While neither Animal nor TallThing satisfy the constraint, T is at worst a Giraffe and compatible with both via covariance.
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.
    
    var h2: (a1: Animal, a2: Animal) => void;
    h2 = f2; // Animal does not satisfy the constraint, but T is at worst a Giraffe and compatible with Animal via covariance.
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.